# StackVecRust

./: CHANGELOG.md  Cargo.toml  README.md
examples/: benchmark.rs
src/: lib.rs
