[package]
name = "stackvec"
version = "0.1.0"
edition = "2025"
authors = [ "igorlev91" ]
repository = "https://github.com/igorlev91/StackVecRust.git"
description = "Implements a non-reallocatable, but resizeable, `Vec`-like structure that lives in the stack."


[dependencies]


[features]
default = []
